# imdbsearch

./: .editorconfig  .gitignore  Cargo.toml  Makefile  README.md  package.json  tailwind.config.js
generate-db/: Dockerfile  generate-imdb.sh
migrations/: 20241027225026_remove_unused_data.sql  20241102170016_add_indexes.sql
src/: db.rs  extractor.rs  index.rs  input.css  main.rs  search.rs
templates/: index.html  layout.html  title-row.html  titles-table.html
