[package]
name = "imdb"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
axum = "0.7.7"
tokio = { version = "1.40.0", features = ["full"] }
sqlx = { version = "0.8.2", features = [
    "runtime-tokio-rustls",
    "any",
    "uuid",
    "time",
    "sqlite",
] }
dotenv = "0.15.0"
time = "0.3.36"
cargo-watch = "8.5.3"
tower-http = { version = "0.6.1", features = [
    "fs",
    "compression-br",
    "compression-deflate",
    "compression-gzip",
] }
tower-livereload = "0.9.4"
