[package]
name = "imdb"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = [] }
askama = "0.12.1"
tokio = { version = "1.40.0", features = ["full"] }
sqlx = { version = "0.8.2", features = [
    "runtime-tokio-rustls",
    "any",
    "uuid",
    "time",
    "sqlite",
] }
dotenv = "0.15.0"
time = "0.3.36"
cargo-watch = "8.5.3"
tower-http = { version = "0.6.1", features = [
    "fs",
    "compression-br",
    "compression-deflate",
    "compression-gzip",
    "trace",
] }
tower-livereload = "0.9.4"
serde = { version = "1.0.210" }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
serde_qs = "0.13.0"
axum-extra = { version = "0.9.4", features = ["form"] }
